Fix collapse all issues (#264)
Investigated the license issues, manually, and they're fine.

* Upgrade to ant-design 3.8.0


* Fix issues with expand / collapse - #259 and #260


* Use yarn registry

--- a/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/TimelineHeaderRow/TimelineHeaderRow.css
+++ b/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/TimelineHeaderRow/TimelineHeaderRow.css
@@ -19,16 +19,15 @@ limitations under the License.
   border-bottom: 1px solid #d8d8d8;
   height: 38px;
   line-height: 38px;
-  overflow: hidden;
   position: fixed;
   width: 100%;
-  z-index: 2;
+  z-index: 4;
 }
 
 .TimelineHeaderRow--title {
-  display: inline-block;
+  flex: 1;
   overflow: hidden;
-  margin: 0 0 0 0.5rem;
+  margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
